# tinygizmo

./: .gitmodules  CMakeLists.txt  readme.md
glfw/: CMakeLists.txt
screenstate/: CMakeLists.txt  CameraState.h  OrbitCamera.cpp  OrbitCamera.h  ScreenState.h  Win32Window.cpp  array_math.h  camera_state.h  castalg.h  fpalg.h  orbit_camera.cpp  orbit_camera.h
tiny-gizmo/: CMakeLists.txt  geometry_mesh.h  gizmo_orientation.cpp  gizmo_position.cpp  gizmo_scale.cpp  impl.h  orientation_gizmo.cpp  position_gizmo.cpp  rigid_transform.h  tiny-gizmo.cpp  tiny-gizmo.hpp  tiny-gizmo_interaction_state.cpp  tiny-gizmo_interaction_state.h  tinygizmo.h  utilmath.cpp  utilmath.h
tiny-gizmo-example/: CMakeLists.txt  CameraView.cpp  CameraView.h  GuiCamera.cpp  GuiCamera.h  example-main.cpp  gl-api.cpp  gl-api.hpp  main.cpp  tiny-gizmo-example.vcxproj  tiny-gizmo-example.vcxproj.filters  util.hpp  window.cpp  window.h
tinygizmo/: CMakeLists.txt  geometry_mesh.cpp  geometry_mesh.h  gizmo.h  gizmo_orientation.cpp  gizmo_position.cpp  gizmo_scale.cpp  impl.h  minalg.h  tinygizmo.cpp  tinygizmo.h  trs.cpp  trs.h  utilmath.cpp  utilmath.h
tinygizmo_example/: CMakeLists.txt  CameraView.cpp  CameraView.h  gl-api.hpp  main.cpp  renderer.h  renderer_impl_gl3.cpp  renderer_impl_glfw.cpp  tiny-gizmo-example.sln  tiny-gizmo-example.vcxproj  tiny-gizmo-example.vcxproj.filters  window.cpp
tinygizmo_example_d3d11/: CMakeLists.txt  dx11_context.cpp  dx11_context.h  dx11_rendertarget.h  main.cpp  renderer_impl_d3d11.cpp
tinygizmo_example_gl3/: CMakeLists.txt  gl-api.hpp  main.cpp  renderer_impl_gl3.cpp
